Revision history for Unicode-Digits

20090530    2009-05-30/00:00:00
        First version, released on an somewhat-suspecting world.
