@@ -1,5 +1,8 @@
 Revision history for Unicode-Digits
 
+20090607    2009-06-07/19:14:00
+        removed digits_to_dual due to bug in dualvar
+
 20090530    2009-05-30/00:00:00
         First version, released on an somewhat-suspecting world.
 
